--- a/CHANGES
+++ b/CHANGES
@@ -18,8 +18,7 @@ Release History
         * added support for all hashes used by the Roundup Issue Tracker
         * bsdi_crypt, sha1_crypt now check for OS crypt() support
         * ``salt_size`` keyword added to encrypt() method of all
-          the hashes which support variable-length salts
-          (cheifly: pbkdf2_{digest}, sha1_crypt, grub_pbkdf2_sha512).
+          the hashes which support variable-length salts.
         * security fix: disabled unix_fallback's "wildcard password" support
           unless explicitly enabled by user.
 
@@ -59,6 +58,11 @@ Release History
             - renamed *{xxx}_salt_chars* attributes -> *xxx_salt_size*
             - renamed *salt_charset* -> *salt_chars*
             - old attributes still present, but deprecated - will remove in 1.5
+
+        * password hash api - tightened specifications for salt & rounds parameters,
+          added support for hashes w/ no max salt size.
+
+        * improved password hash api conformance tests
 
 **1.3.1** (2011-03-28)
 
