--- a/CHANGES
+++ b/CHANGES
@@ -69,6 +69,8 @@ Release History
 
         * improved password hash api conformance tests
 
+        * PyPy compatibility
+
 **1.3.1** (2011-03-28)
 
     * bugfix: replaced "sys.maxsize" reference that was failing under py25
