start of 1.5 development

--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,10 @@
 Release History
 ===============
 
+**1.5** (NOT YET RELEASED)
+
+    * added quickstart guide to documentation
+    
 **1.4** (2011-05-04)
 
     This release contains a large number of changes, both large and small.
