--- a/CHANGES
+++ b/CHANGES
@@ -7,6 +7,7 @@ Release History
 **1.5** (NOT YET RELEASED)
 
     * added quickstart guide to documentation
+    * removed deprecated parts of :mod:`passlib.utils.handlers`.
     
 **1.4** (2011-05-04)
 
