--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@ Release History
 
 **1.5** (NOT YET RELEASED)
 
+    * added support for using BCryptor as bcrypt backend
     * added quickstart guide to documentation
     * removed deprecated parts of :mod:`passlib.utils.handlers`.
     
