--- a/README
+++ b/README
@@ -17,7 +17,7 @@ The latest documentation can be found online at `<http://packages.python.org/pas
 Requirements
 ============
 * Python 2.5 - 2.7
-* PyBCrypt (optional; required only if bcrypt support is needed)
+* PyBCrypt or BCryptor (optional; required only if bcrypt support is needed)
 * M2Crypto (optional; accelerates PBKDF2-based hashes)
 
 Installation
