--- a/CHANGES
+++ b/CHANGES
@@ -6,7 +6,9 @@ Release History
 
 **1.5** (NOT YET RELEASED)
 
-    * added support for using BCryptor as bcrypt backend
+    * added support for FSHP family of hashes
+    * added support for Cryptacular's PBKDF2 format
+    * added support for using BCryptor as BCrypt backend
     * added quickstart guide to documentation
     * removed deprecated parts of :mod:`passlib.utils.handlers`.
     
