basic work to make CryptContext unicode aware.
* updated CryptContext UTs as well.
* also added some general unicode<->bytes helpers to utils (needs UTs).
* also a few 2to3 conditional hints added to CryptContext so passlib can load

--- a/CHANGES
+++ b/CHANGES
@@ -21,6 +21,9 @@ Release History
           but any extant config files should be updated,
           as the errors will be fatal in passlib 1.6.
     
+        * added encoding keyword to CryptContext's from_path, from_string,
+          and to_string methods.          
+    
     Documentation
         * added quickstart guide to documentation
         
