--- a/README
+++ b/README
@@ -6,17 +6,18 @@ The PassLib Python Library
 
 Welcome
 =======
-PassLib is a password hash library, which provides cross-platform
-implementations of over 20 password hashing algorithms; as well as a framework for managing
-and migrating existing password hashes. It's designed to be useful
-for any task from quickly verifying a hash found in /etc/shadow,
+Passlib is a password hashing library for Python 2 & 3,
+which provides cross-platform implementations of over 20
+password hashing algorithms, as well as a framework for
+managing existing password hashes. It's designed to be useful
+for a wide range of tasks, from verifying a hash found in /etc/shadow,
 to providing full-strength password hashing for multi-user application.
 
 The latest documentation can be found online at `<http://packages.python.org/passlib>`_.
 
 Requirements
 ============
-* Python 2.5 - 2.7
+* Python 2.5 - 2.7 or Python 3
 * PyBCrypt or BCryptor (optional; required only if bcrypt support is needed)
 * M2Crypto (optional; accelerates PBKDF2-based hashes)
 
@@ -31,7 +32,7 @@ For more detailed installation & testing instructions, see "docs/install.rst"
 
 Online Resources
 ================
-* Homepage -   http://code.google.com/p/passlib
+* Homepage -   http://passlib.googlecode.com
 * Docs -       http://packages.python.org/passlib
 * Discussion - http://groups.google.com/group/passlib-users
 
