--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,11 @@
 Release History
 ===============
 
+**1.5.1** (NOT YET RELEASED)
+
+    * bugfix: fixed error thrown by CryptContext.verify
+      when issuing min_verify_time warning [issue 17]
+
 **1.5** (2011-07-11)
 
     *"20% more unicode than the leading breakfast cereal"*
