--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,9 @@ Release History
 
     * bugfix: fixed error thrown by CryptContext.verify
       when issuing min_verify_time warning [issue 17]
+      
+    * removed min_verify_time setting from custom_app_context,
+      min_verify_time is too host & load dependant to be hardcoded [issue 17].
 
 **1.5** (2011-07-11)
 
