--- a/CHANGES
+++ b/CHANGES
@@ -14,13 +14,16 @@ Release History
         - provide fallback for loading ``passlib/default.cfg``
           if :mod:`pkg_resources` is not present.
 
+        - under GAE, disable CryptContext unittests which
+          require writing to filesystem
+
     * bugfix: fixed error thrown by CryptContext.verify
       when issuing min_verify_time warning [issue 17]
 
     * removed min_verify_time setting from custom_app_context,
       min_verify_time is too host & load dependant to be hardcoded [issue 17].
 
-    * more UT coverage for :mod:`passlib.apps` and :mod:`passlib.hosts`
+    * more unittest coverage for :mod:`passlib.apps` and :mod:`passlib.hosts`
 
 **1.5** (2011-07-11)
 
