GAE compatibility fix: changed apache UTs to not rely on filesystem.
* added private constructor Htpasswd._from_string(), will clean it up and make public in future
* most apache tests now use _from_string() so they don't have to write to fs
* tests which still require writing to fs (mainly the autoload tests) now skipped for GAE

--- a/CHANGES
+++ b/CHANGES
@@ -9,13 +9,13 @@ Release History
     * Google App Engine compatibility:
 
         - bugfix: make ``passlib.hash.__loader__`` attribute writable -
-          needed by Google App Engine [issue 19]
+          needed by Google App Engine [issue 19].
 
-        - provide fallback for loading ``passlib/default.cfg``
+        - bugfix: provide fallback for loading ``passlib/default.cfg``
           if :mod:`pkg_resources` is not present.
 
-        - under GAE, disable CryptContext unittests which
-          require writing to filesystem
+        - under GAE, disable all unittests which
+          require writing to filesystem.
 
     * bugfix: fixed error thrown by CryptContext.verify
       when issuing min_verify_time warning [issue 17]
