--- a/CHANGES
+++ b/CHANGES
@@ -4,26 +4,27 @@
 Release History
 ===============
 
-**1.5.1** (NOT YET RELEASED)
+**1.5.1** (2011-08-17)
+    
+    Minor bugfix release; now compatible with Google App Engine.
 
-    * Google App Engine compatibility:
+    * bugfix: make ``passlib.hash.__loader__`` attribute writable -
+      needed by Google App Engine (GAE) [issue 19].
 
-        - bugfix: make ``passlib.hash.__loader__`` attribute writable -
-          needed by Google App Engine [issue 19].
-
-        - bugfix: provide fallback for loading ``passlib/default.cfg``
-          if :mod:`pkg_resources` is not present.
-
-        - under GAE, disable all unittests which
-          require writing to filesystem.
+    * bugfix: provide fallback for loading ``passlib/default.cfg``
+      if :mod:`pkg_resources` is not present, such as for GAE [issue 19].
 
     * bugfix: fixed error thrown by CryptContext.verify
-      when issuing min_verify_time warning [issue 17]
+      when issuing min_verify_time warning [issue 17].
 
     * removed min_verify_time setting from custom_app_context,
       min_verify_time is too host & load dependant to be hardcoded [issue 17].
 
-    * more unittest coverage for :mod:`passlib.apps` and :mod:`passlib.hosts`
+    * under GAE, disable all unittests which require writing to filesystem.
+
+    * more unittest coverage for :mod:`passlib.apps` and :mod:`passlib.hosts`.
+    
+    * improved version datestamps in build script.
 
 **1.5** (2011-07-11)
 
