--- a/CHANGES
+++ b/CHANGES
@@ -17,7 +17,7 @@ Release History
           :mod:`Hash64 <passlib.utils.h64>` characters in it's salts;
           previously it accepted only lower-case hexidecimal characters [issue 22].
 
-        * additional unittests added for all
+        * Additional unittests added for all
           standard :doc:`Django hashes </lib/passlib.hash.django_std>`.
 
         * :class:`django_des_crypt` now rejects hashes where salt and checksum
@@ -30,7 +30,7 @@ Release History
         * *bugfix:* fixed exception in :meth:`CryptPolicy.iter_config`
           that occurred when iterating over deprecation options.
 
-        * added documentation for the (mistakenly undocumented)
+        * Added documentation for the (mistakenly undocumented)
           :meth:`CryptContext.verify_and_update` method.
 
 **1.5.1** (2011-08-17)
