--- a/CHANGES
+++ b/CHANGES
@@ -6,21 +6,29 @@ Release History
 
 **1.6** (NOT YET RELEASED)
 
-    Removal of Deprecated Features
+    CryptContext
 
-        * Config files should now use :class:`SafeConfigParser` interpolation.
+        .. currentmodule:: passlib.context
 
-          :meth:`CryptPolicy.from_file` and :meth:`CryptPolicy.from_string`
+        * Config parsing now done with :class:`SafeConfigParser`.
+
+          :meth:`CryptPolicy.from_path` and :meth:`CryptPolicy.from_string`
           previously used :class:`!ConfigParser` interpolation.
           Release 1.5 switched to :class:`SafeConfigParser`,
           but kept support for the old format as a (deprecated) fallback.
-          This fallback has been removed in 1.6; any remaining
-          legacy config files may need to escape some ``%`` characters
-          in order to load correctly.
+          This fallback has been removed in 1.6; any
+          legacy config files may need to escape raw ``%`` characters
+          in order to load successfully.
 
-        * Calls to :meth:`~passlib.hash.HasManyBackends.set_backend` should now
-          use the string ``"any"`` instead of the value ``None``. ``None``
-          was deprecated in release 1.5, and is no longer supported.
+    Utils
+
+        .. currentmodule:: passlib.utils.handlers
+
+        * Calls to :meth:`HasManyBackends.set_backend`
+          should now use the string ``"any"`` instead of the value ``None``.
+          ``None`` was deprecated in release 1.5, and is no longer supported.
+          This affects all schemes in :mod:`passlib.hash` which support
+          multiple backends.
 
 **1.5.1** (2011-08-17)
 
