replaced utils.h64 module with utils.Base64Engine instance
* new utils.Base64Engine() provides flexible class for encoding arbitrary base64 charmaps.
  it should also be a bit faster than the old h64 module.
* predefined 'h64' instance has mostly the same methods as the old h64 module
  which it takes the place off - so imports should be unaffected.
  (the only the exception of the xxx_dc_xxx methods, which now use the 'h64big' instance)
* replaced utils._blowfish base64 encoding with custom Base64Engine instance
  to reduce code duplication.
* more through unittests for Base64Engine.

--- a/CHANGES
+++ b/CHANGES
@@ -13,7 +13,7 @@ Release History
           a user against the SCRAM protocol (:rfc:`5802`). It can also
           be used to verify users in the same way as any other password
           hash in Passlib, though it offers no particular advantages
-          outside of this special case. 
+          outside of this special case.
 
     CryptContext
 
@@ -48,6 +48,13 @@ Release History
           ``None`` was deprecated in release 1.5, and is no longer supported.
           This affects all schemes in :mod:`passlib.hash` which support
           multiple backends.
+
+        .. currentmodule:: passlib.utils
+
+        * :mod:`!passlib.utils.h64` has been replaced by an instance of the
+          new :class:`~passlib.utils.Base64Engine` class. This  instance is
+          imported under the same name, and has (mostly) the same interface;
+          but should be faster, more flexible, and better unit-tested.
 
     Other
 
@@ -144,7 +151,7 @@ Release History
         .. currentmodule:: passlib.hash
 
         * *bugfix:* :class:`django_des_crypt` now accepts all
-          :mod:`Hash64 <passlib.utils.h64>` characters in it's salts;
+          :data:`hash64 <passlib.utils.h64>` characters in it's salts;
           previously it accepted only lower-case hexidecimal characters [issue 22].
 
         * Additional unittests added for all
