utils.handlers framework reworked; removed a bunch of boilerplate code
* StaticHandler is now subclass of GenericHandler
    - _calc_checksum() should be implemented instead of encrypt().
     (compatibility stub added so old code should continue to work)
    - _norm_hash() no longer needs to handle ->unicode conversion
    - default from_string() contains a bunch of features,
      including stripping a known prefix, etc.

* context kwds now pulled into constructor, so GenericHandler
  supports context kwds properly; HasUserContext mixin added
  to support common 'user' context kwd

* identify_regexp & identify_prefix removed, functionality
  rolled into default GenericHandler.identify() implementation.

    - default identify checks _hash_regex as potential way to identify hashes

* HasStubChecksum removed, functionality rolled into GenericHandler

* HasRawChecksum now just sets a flag, functionality moved into GenericHandler

* HasManyIdents._parse_ident() helper added to valid & split identifier
  from hashes.

* GenericHandler._norm_checksum() is now strict about unicode / bytes

--- a/CHANGES
+++ b/CHANGES
@@ -46,6 +46,10 @@ Release History
 
         .. currentmodule:: passlib.utils.handlers
 
+        * Internal handler framework (:mod:`passlib.utils.handlers`) rewritten
+          drastically. Provides stricter input checking, reduction in
+          boilerplate code.
+
         * :class:`~passlib.utils.handlers.GenericHandler` and related mixins
           changed in backward-incompatible way: the ``strict`` keyword
           was removed. :class:`!GenericHandler` now defaults to a behavior
@@ -53,6 +57,10 @@ Release History
           all values be specified, and that all values be within correct bounds.
           The new keywords ``use_defaults`` and ``relaxed`` can be used
           to disable these two requirements, respectively.
+
+        * :class:`~passlib.utils.handlers.StaticHandler` now derived from
+        :class:`!GenericHandler`, and required ``_calc_checksum()`` be
+        implemented instead of ``encrypt()``.
 
         * :class:`~passlib.utils.handlers.GenericHandler` and related mixins
           changed in backward-incompatible way: the :samp:`norm_{xxx}`
@@ -84,6 +92,9 @@ Release History
 
         * Passlib is now source-compatible with Python 2.5+ and Python 3,
           and no longer requires the use of :command:`2to3` to run under Python 3.
+
+        * Hash unittest framework rewritten. More border cases handled,
+          some simple fuzz testing added.
 
         .. currentmodule:: passlib.hash
 
