added mssql 2000/2005 hashes; enhanced HandlerCase's password case sensitive test

--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,10 @@ Release History
 
     Hashes
 
+        * added support for MS SQL Server password hashes (
+          :doc:`mssql2000 <lib/passlib.hash.mssql2000>` and
+          :doc:`mssql2005 <lib/passlib.hash.mssql2005>`).
+
         * Passlib now offers the :doc:`scram <lib/passlib.hash.scram>` hash,
           specially designed for storing digest information for verifying
           a user against the SCRAM protocol (:rfc:`5802`). It can also
