added support for Cisco PIX & Type 7 hashes
* Cisco Type 5 appears to be same as md5_crypt
* added requires_user=False support to HandlerCase
* added more through salt-generation test (since
  cisco_pix has only 4 bits of salt)
* added HandlerCase test to ensure user is used as salt

--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,11 @@ Release History
 
     Hashes
 
+        * added support for Cisco :doc:`PIX <lib/passlib.hash.cisco_pix>` and
+          :doc:`Type 7 <lib/passlib.hash.cisco_type7>` password hashes.
+          (Cisco Type 5 passwords seem to be the same as
+          :doc:`md5_crypt <lib/passlib.hash.md5_crypt>`).
+
         * added support for MS SQL Server password hashes (
           :doc:`mssql2000 <lib/passlib.hash.mssql2000>` and
           :doc:`mssql2005 <lib/passlib.hash.mssql2005>`).
