renamed nthash -> bsd_nthash; added real nthash implemented
after some thought, realized the 'nthash' name should implement
the raw hash. since bsd_nthash was very rarely used, it shouldn't
present backwards incompatibility issues at this point to go
ahead and rename it.

--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,11 @@ Release History
 
     Hashes
 
+        * The rarely-used hash previously known as ``nthash`` has been renamed to
+          :class:`~passlib.hash.bsd_nthash`, to better indicate it's lineage;
+          a new :class:`~passlib.hash.nthash` class now directly implements
+          the plain hexidecimal Windows NT password hash.
+
         * added support for Windows' :doc:`lmhash <lib/passlib.hash.lmhash>`
           (aka Lan Manager password hash).
 
