--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,11 @@ Release History
 
     Hashes
 
+        * Added support for Window's Domain Cached Credentials (aka
+          "dcc", "mscache", "mscash"), versions 1 and 2:
+          :doc:`msdcc <lib/passlib.hash.msdcc>` and
+          :doc:`msdcc2 <lib/passlib.hash.msdcc2>`.
+
         * The rarely-used hash previously known as ``nthash`` has been renamed to
           :class:`~passlib.hash.bsd_nthash`, to better indicate it's lineage;
           a new :class:`~passlib.hash.nthash` class now directly implements
