various bcrypt improvements
* studied crypt_blowfish's 8bit bug
	- verified none of passlib's backends were affected
	- added recognition (but not support) for crypt_blowfish's $2x$ hash prefix
	- added support for crypt_blowfish's $2y$ hash prefix
	- note in docs about Passlib's current handling of crypt_blowfish 8bit issues.
* refactored bcrypt's salt-unused-bits repair code into Base64Engine.repair_unused(),
  making the code cleaner and more isolated. a bunch more tests.
* added bcrypt64 (bcrypt-base64 variant) to utils
* added LazyBase64Engine to reduce memory / startup time

--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,10 @@ Release History
 
     Hashes
 
+        * The :doc:`bcrypt <lib/passlib.hash.bcrypt>` class now supports
+          crypt_blowfish's ``$2y$`` hash prefix (though it will not generate
+          them by default).
+
         * The *unix_fallback* handler has been deprecated, and will be removed
           in Passlib 1.8. Please use the improved replacement,
           :doc:`unix_disabled <lib/passlib.hash.unix_disabled>`,
